done with logic of the game 🫡

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     <section class="main opacity">
       <div class="player-score scores">
         <div class="player-name">Player</div>
-        <div class="score player-score">0</div>
+        <div class="score player-display-score">0</div>
       </div>
       <div class="computer-score scores">
-        <div>Computer</div>
-        <div class="score computer-score">0</div>
+        <div class="computer-name">
+          Computer
+          <div class="crown crown-computer crown-hidden">👑</div>
+        </div>
+        <div class="score computer-display-score">0</div>
       </div>
       <div class="player-choice"><img src="img/rock.png" alt="" /></div>
       <div class="computer-choice"><img src="img/rock.png" alt="" /></div>
