game working now 🫡

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
       <div class="computer-score scores">
         <div class="computer-name">
-          Computer
+          computer
           <div class="crown crown-computer crown-hidden">👑</div>
         </div>
         <div class="score computer-display-score">0</div>
